commit for cleaner functions

--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T20:44:35.348167Z",
-     "start_time": "2022-07-20T20:44:34.916652Z"
+     "end_time": "2022-07-20T22:47:47.347955Z",
+     "start_time": "2022-07-20T22:47:46.864893Z"
     }
    },
    "outputs": [
@@ -21,7 +21,7 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "import numpy as _np\n",
     "#from bgen_reader import open_bgen\n",
     "#from os.path import join\n",
     "#from pandas_plink import read_plink1_bin\n",
@@ -33,14 +33,14 @@
     "# import os\n",
     "# from pysnptools.distreader import Bgen, DistMemMap\n",
     "# from pathlib import Path\n",
-    "from bed_reader import open_bed\n",
+    "from bed_reader import open_bed as _open_bed\n",
     "# from pysnptools.snpreader import SnpData, SnpMemMap\n",
     "# from pysnptools.util import log_in_place\n",
     "# import matplotlib.pyplot as plt\n",
     "# from scipy.stats import gaussian_kde\n",
-    "from KDEpy import FFTKDE\n",
+    "from KDEpy import FFTKDE as _FFTKDE\n",
     "# from pybgen import PyBGEN\n",
-    "import multiprocess as mp"
+    "import multiprocess as _mp"
    ]
   },
   {
@@ -49,8 +49,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T20:44:35.371018Z",
-     "start_time": "2022-07-20T20:44:35.349776Z"
+     "end_time": "2022-07-20T22:47:47.370381Z",
+     "start_time": "2022-07-20T22:47:47.349462Z"
     }
    },
    "outputs": [],
@@ -61,48 +61,48 @@
     "    assume no missing data\n",
     "    \"\"\"\n",
     "    # first estimate the pmf\n",
-    "    p0 = np.sum(b==0)/len(b)\n",
-    "    p1 = np.sum(b==1)/len(b)\n",
+    "    p0 = _np.sum(b==0)/len(b)\n",
+    "    p1 = _np.sum(b==1)/len(b)\n",
     "    p2 = 1.-p0-p1\n",
     "    # estimate cond density\n",
     "    _b0 = (b==0)\n",
-    "    if np.sum(_b0)>2: # here proceed to kde only if there are more than 5 data points\n",
-    "        y_cond_p0 = FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(data=a[_b0])\n",
+    "    if _np.sum(_b0)>2: # here proceed to kde only if there are more than 5 data points\n",
+    "        y_cond_p0 = _FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(data=a[_b0])\n",
     "#         y_cond_p0 = gaussian_kde(a[_b0])\n",
     "    else:\n",
-    "        y_cond_p0 = np.zeros_like\n",
+    "        y_cond_p0 = _np.zeros_like\n",
     "    _b1 = (b==1)\n",
-    "    if np.sum(_b1)>2:\n",
-    "        y_cond_p1 = FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(data=a[_b1])\n",
+    "    if _np.sum(_b1)>2:\n",
+    "        y_cond_p1 = _FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(data=a[_b1])\n",
     "#         y_cond_p1 = gaussian_kde(a[_b1]) # this thing uses Scott's rule instead of Silverman defaulted by FFTKDE and R density\n",
     "    else:\n",
-    "        y_cond_p1 = np.zeros_like\n",
+    "        y_cond_p1 = _np.zeros_like\n",
     "    _b2 = (b==2)\n",
-    "    if np.sum(_b2)>2:\n",
-    "        y_cond_p2 = FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(data=a[_b2])\n",
+    "    if _np.sum(_b2)>2:\n",
+    "        y_cond_p2 = _FFTKDE(kernel=\"gaussian\", bw=\"silverman\").fit(data=a[_b2])\n",
     "#         y_cond_p2 = gaussian_kde(a[_b2])\n",
     "    else:\n",
-    "        y_cond_p2 = np.zeros_like\n",
-    "    joint = np.empty((N,3))\n",
-    "    a_temp = np.linspace(a_min, a_max, num=N)\n",
+    "        y_cond_p2 = _np.zeros_like\n",
+    "    joint = _np.empty((N,3))\n",
+    "    a_temp = _np.linspace(a_min, a_max, num=N)\n",
     "    joint[:,0] = y_cond_p0(a_temp)*p0\n",
     "    joint[:,1] = y_cond_p1(a_temp)*p1\n",
     "    joint[:,2] = y_cond_p2(a_temp)*p2\n",
     "    joint[joint<1e-20] = 1e-20 # set a threshold to avoid numerical errors\n",
     "    forward_euler_step = a_temp[1]-a_temp[0]\n",
-    "#     print(\"total measure:\", np.sum(joint)*forward_euler_step)\n",
-    "    temp_log = np.log(joint)\n",
-    "#     temp_log = np.nan_to_num(temp_log, nan = 0)\n",
-    "    temp1 = np.log(np.sum(joint, 1))\n",
-    "#     temp1 = np.nan_to_num(temp1, nan = 0)\n",
+    "#     print(\"total measure:\", _np.sum(joint)*forward_euler_step)\n",
+    "    temp_log = _np.log(joint)\n",
+    "#     temp_log = _np.nan_to_num(temp_log, nan = 0)\n",
+    "    temp1 = _np.log(_np.sum(joint, 1))\n",
+    "#     temp1 = _np.nan_to_num(temp1, nan = 0)\n",
     "    temp_log = temp_log - temp1.reshape(-1,1)\n",
-    "    temp2 = np.log(np.sum(joint, 0)*forward_euler_step)\n",
-    "#     temp2 = np.nan_to_num(temp2, nan = 0)\n",
+    "    temp2 = _np.log(_np.sum(joint, 0)*forward_euler_step)\n",
+    "#     temp2 = _np.nan_to_num(temp2, nan = 0)\n",
     "    temp_log = temp_log - temp2.reshape(1,-1)\n",
     "    # print(fhat_mat * temp_log)\n",
     "    temp_mat = joint * temp_log\n",
-    "#     temp_mat = np.nan_to_num(temp_mat, nan=0.) # numerical fix\n",
-    "    mi_temp = np.sum(temp_mat)*forward_euler_step\n",
+    "#     temp_mat = _np.nan_to_num(temp_mat, nan=0.) # numerical fix\n",
+    "    mi_temp = _np.sum(temp_mat)*forward_euler_step\n",
     "    return mi_temp\n",
     "\n",
     "def _MI_binary(a, b, a_min, a_max, N=500):\n",
@@ -111,51 +111,51 @@
     "    assume no missing data\n",
     "    \"\"\"\n",
     "    # first estimate the pmf of SNP\n",
-    "    p0 = np.sum(b==0)/len(b)\n",
-    "    p1 = np.sum(b==1)/len(b)\n",
+    "    p0 = _np.sum(b==0)/len(b)\n",
+    "    p1 = _np.sum(b==1)/len(b)\n",
     "    p2 = 1.-p0-p1\n",
     "    # estimate pmf of the binary outcome\n",
-    "    a_p0 = np.sum(a==0)/len(a)\n",
-    "    a_p1 = np.sum(a==1)/len(a)\n",
+    "    a_p0 = _np.sum(a==0)/len(a)\n",
+    "    a_p1 = _np.sum(a==1)/len(a)\n",
     "    # estimate cond density\n",
     "    _b0 = (b==0)\n",
-    "    if np.sum(_b0)>2: # here proceed to kde only if there are more than 5 data points\n",
-    "        y_cond_p0 = lambda x: x*np.sum(a[_b0]==1)/len(a[_b0]) + (1-x)*np.sum(a[_b0]==0)/len(a[_b0])\n",
+    "    if _np.sum(_b0)>2: # here proceed to kde only if there are more than 5 data points\n",
+    "        y_cond_p0 = lambda x: x*_np.sum(a[_b0]==1)/len(a[_b0]) + (1-x)*_np.sum(a[_b0]==0)/len(a[_b0])\n",
     "#         y_cond_p0 = gaussian_kde(a[_b0])\n",
     "    else:\n",
-    "        y_cond_p0 = np.zeros_like\n",
+    "        y_cond_p0 = _np.zeros_like\n",
     "    _b1 = (b==1)\n",
-    "    if np.sum(_b1)>2:\n",
-    "        y_cond_p1 = lambda x: x*np.sum(a[_b1]==1)/len(a[_b1]) + (1-x)*np.sum(a[_b1]==0)/len(a[_b1])\n",
+    "    if _np.sum(_b1)>2:\n",
+    "        y_cond_p1 = lambda x: x*_np.sum(a[_b1]==1)/len(a[_b1]) + (1-x)*_np.sum(a[_b1]==0)/len(a[_b1])\n",
     "#         y_cond_p1 = gaussian_kde(a[_b1]) # this thing uses Scott's rule instead of Silverman defaulted by FFTKDE and R density\n",
     "    else:\n",
-    "        y_cond_p1 = np.zeros_like\n",
+    "        y_cond_p1 = _np.zeros_like\n",
     "    _b2 = (b==2)\n",
-    "    if np.sum(_b2)>2:\n",
-    "        y_cond_p2 = lambda x: x*np.sum(a[_b2]==1)/len(a[_b2]) + (1-x)*np.sum(a[_b2]==0)/len(a[_b2])\n",
+    "    if _np.sum(_b2)>2:\n",
+    "        y_cond_p2 = lambda x: x*_np.sum(a[_b2]==1)/len(a[_b2]) + (1-x)*_np.sum(a[_b2]==0)/len(a[_b2])\n",
     "#         y_cond_p2 = gaussian_kde(a[_b2])\n",
     "    else:\n",
-    "        y_cond_p2 = np.zeros_like\n",
-    "    joint = np.empty((N,3))\n",
-    "    a_temp = np.linspace(a_min, a_max, num=N)\n",
+    "        y_cond_p2 = _np.zeros_like\n",
+    "    joint = _np.empty((N,3))\n",
+    "    a_temp = _np.linspace(a_min, a_max, num=N)\n",
     "    joint[:,0] = y_cond_p0(a_temp)*p0\n",
     "    joint[:,1] = y_cond_p1(a_temp)*p1\n",
     "    joint[:,2] = y_cond_p2(a_temp)*p2\n",
     "    joint[joint<1e-20] = 1e-20 # set a threshold to avoid numerical errors\n",
     "    forward_euler_step = a_temp[1]-a_temp[0]\n",
-    "#     print(\"total measure:\", np.sum(joint)*forward_euler_step)\n",
-    "    temp_log = np.log(joint)\n",
-    "#     temp_log = np.nan_to_num(temp_log, nan = 0)\n",
-    "    temp1 = np.log(np.sum(joint, 1))\n",
-    "#     temp1 = np.nan_to_num(temp1, nan = 0)\n",
+    "#     print(\"total measure:\", _np.sum(joint)*forward_euler_step)\n",
+    "    temp_log = _np.log(joint)\n",
+    "#     temp_log = _np.nan_to_num(temp_log, nan = 0)\n",
+    "    temp1 = _np.log(_np.sum(joint, 1))\n",
+    "#     temp1 = _np.nan_to_num(temp1, nan = 0)\n",
     "    temp_log = temp_log - temp1.reshape(-1,1)\n",
-    "    temp2 = np.log(np.sum(joint, 0)*forward_euler_step)\n",
-    "#     temp2 = np.nan_to_num(temp2, nan = 0)\n",
+    "    temp2 = _np.log(_np.sum(joint, 0)*forward_euler_step)\n",
+    "#     temp2 = _np.nan_to_num(temp2, nan = 0)\n",
     "    temp_log = temp_log - temp2.reshape(1,-1)\n",
     "    # print(fhat_mat * temp_log)\n",
     "    temp_mat = joint * temp_log\n",
-    "#     temp_mat = np.nan_to_num(temp_mat, nan=0.) # numerical fix\n",
-    "    mi_temp = np.sum(temp_mat)*forward_euler_step\n",
+    "#     temp_mat = _np.nan_to_num(temp_mat, nan=0.) # numerical fix\n",
+    "    mi_temp = _np.sum(temp_mat)*forward_euler_step\n",
     "    return mi_temp\n",
     "\n",
     "# outcome_iid should be a  list of strings for identifiers \n",
@@ -163,15 +163,15 @@
     "    \"\"\"\n",
     "    (Single Core version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
     "    \"\"\"\n",
-    "    bed1 = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
-    "    gene_iid = np.array(list(bed1.iid))\n",
-    "    bed1_sid = np.array(list(bed1.sid))\n",
-    "    outcome = outcome[np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "    bed1 = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "    gene_iid = _np.array(list(bed1.iid))\n",
+    "    bed1_sid = _np.array(list(bed1.sid))\n",
+    "    outcome = outcome[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
     "    # get genetic indices\n",
-    "    gene_ind = np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
-    "    MI_UKBB = np.zeros_like(bed1_sid)\n",
+    "    gene_ind = _np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
+    "    MI_UKBB = _np.zeros_like(bed1_sid)\n",
     "    for j in range(len(MI_UKBB)):\n",
-    "        _SNP = bed1.read(np.s_[:,j], dtype=np.int8).flatten()\n",
+    "        _SNP = bed1.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "        _SNP = _SNP[gene_ind] # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
@@ -182,15 +182,15 @@
     "    \"\"\"\n",
     "    (Single Core version) take plink files to calculate the mutual information between the binary outcome and many SNP variables.\n",
     "    \"\"\"\n",
-    "    bed1 = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
-    "    gene_iid = np.array(list(bed1.iid))\n",
-    "    bed1_sid = np.array(list(bed1.sid))\n",
-    "    outcome = outcome[np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "    bed1 = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "    gene_iid = _np.array(list(bed1.iid))\n",
+    "    bed1_sid = _np.array(list(bed1.sid))\n",
+    "    outcome = outcome[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
     "    # get genetic indices\n",
-    "    gene_ind = np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
-    "    MI_UKBB = np.zeros_like(bed1_sid)\n",
+    "    gene_ind = _np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
+    "    MI_UKBB = _np.zeros_like(bed1_sid)\n",
     "    for j in range(len(MI_UKBB)):\n",
-    "        _SNP = bed1.read(np.s_[:,j], dtype=np.int8).flatten()\n",
+    "        _SNP = bed1.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "        _SNP = _SNP[gene_ind] # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
@@ -202,17 +202,17 @@
     "    \"\"\"\n",
     "    (Multiprocessing version) take plink files to calculate the mutual information between the continuous outcome and many SNP variables.\n",
     "    \"\"\"\n",
-    "    bed1 = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
-    "    gene_iid = np.array(list(bed1.iid))\n",
-    "    bed1_sid = np.array(list(bed1.sid))\n",
-    "    outcome = outcome[np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "    bed1 = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "    gene_iid = _np.array(list(bed1.iid))\n",
+    "    bed1_sid = _np.array(list(bed1.sid))\n",
+    "    outcome = outcome[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
     "    # get genetic indices\n",
-    "    gene_ind = np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
+    "    gene_ind = _np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
     "    def _continuous_filter_slice(_slice):\n",
-    "        _MI_slice = np.zeros_like(_slice)\n",
+    "        _MI_slice = _np.zeros_like(_slice)\n",
     "        k = 0\n",
     "        for j in _slice:\n",
-    "            _SNP = bed1.read(np.s_[:,j], dtype=np.int8).flatten()\n",
+    "            _SNP = bed1.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "            _SNP = _SNP[gene_ind] # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
@@ -220,11 +220,11 @@
     "            k += 1\n",
     "        return _MI_slice\n",
     "    # multiprocessing starts here\n",
-    "    ind = np.arange(len(bed1_sid))\n",
-    "    n_slices = np.ceil(len(ind)/chunck_size)\n",
-    "    with mp.Pool(mp.cpu_count()) as p:\n",
-    "        MI_UKBB = p.map(_continuous_filter_slice, np.array_split(ind, n_slices))\n",
-    "    MI_UKBB = np.hstack(MI_UKBB)\n",
+    "    ind = _np.arange(len(bed1_sid))\n",
+    "    n_slices = _np.ceil(len(ind)/chunck_size)\n",
+    "    with _mp.Pool(_mp.cpu_count()) as p:\n",
+    "        MI_UKBB = p.map(_continuous_filter_slice, _np.array_split(ind, n_slices))\n",
+    "    MI_UKBB = _np.hstack(MI_UKBB)\n",
     "    return MI_UKBB\n",
     "\n",
     "\n",
@@ -232,17 +232,17 @@
     "    \"\"\"\n",
     "    (Multiprocessing version) take plink files to calculate the mutual information between the binary outcome and many SNP variables.\n",
     "    \"\"\"\n",
-    "    bed1 = open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
-    "    gene_iid = np.array(list(bed1.iid))\n",
-    "    bed1_sid = np.array(list(bed1.sid))\n",
-    "    outcome = outcome[np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
+    "    bed1 = _open_bed(filepath=bed_file, fam_filepath=fam_file, bim_filepath=bim_file)\n",
+    "    gene_iid = _np.array(list(bed1.iid))\n",
+    "    bed1_sid = _np.array(list(bed1.sid))\n",
+    "    outcome = outcome[_np.intersect1d(outcome_iid, gene_iid, assume_unique=True, return_indices=True)[1]]\n",
     "    # get genetic indices\n",
-    "    gene_ind = np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
+    "    gene_ind = _np.intersect1d(gene_iid, outcome_iid, assume_unique=True, return_indices=True)[1]\n",
     "    def _binary_filter_slice(_slice):\n",
-    "        _MI_slice = np.zeros_like(_slice)\n",
+    "        _MI_slice = _np.zeros_like(_slice)\n",
     "        k = 0\n",
     "        for j in _slice:\n",
-    "            _SNP = bed1.read(np.s_[:,j], dtype=np.int8).flatten()\n",
+    "            _SNP = bed1.read(_np.s_[:,j], dtype=_np.int8).flatten()\n",
     "            _SNP = _SNP[gene_ind] # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127] # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127] # remove missing SNP\n",
@@ -250,11 +250,11 @@
     "            k += 1\n",
     "        return _MI_slice\n",
     "    # multiprocessing starts here\n",
-    "    ind = np.arange(len(bed1_sid))\n",
-    "    n_slices = np.ceil(len(ind)/chunck_size)\n",
-    "    with mp.Pool(mp.cpu_count()) as p:\n",
-    "        MI_UKBB = p.map(_binary_filter_slice, np.array_split(ind, n_slices))\n",
-    "    MI_UKBB = np.hstack(MI_UKBB)\n",
+    "    ind = _np.arange(len(bed1_sid))\n",
+    "    n_slices = _np.ceil(len(ind)/chunck_size)\n",
+    "    with _mp.Pool(_mp.cpu_count()) as p:\n",
+    "        MI_UKBB = p.map(_binary_filter_slice, _np.array_split(ind, n_slices))\n",
+    "    MI_UKBB = _np.hstack(MI_UKBB)\n",
     "    return MI_UKBB\n",
     "\n"
    ]
@@ -265,8 +265,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T20:44:35.383991Z",
-     "start_time": "2022-07-20T20:44:35.372040Z"
+     "end_time": "2022-07-20T22:47:47.382608Z",
+     "start_time": "2022-07-20T22:47:47.371467Z"
     }
    },
    "outputs": [
@@ -274,11 +274,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0861960938746857\n"
+      "0.12180639345787614\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "a = np.random.binomial(2,.3, 200)\n",
     "b = np.random.binomial(2,.3, 200)\n",
     "print(_MI_binary(a, b, a_min=0., a_max=2., N=500))\n"
