--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -222,8 +222,8 @@
     "    # multiprocessing starts here\n",
     "    ind = _np.arange(len(bed1_sid))\n",
     "    n_slices = _np.ceil(len(ind)/chunck_size)\n",
-    "    with _mp.Pool(_mp.cpu_count()) as p:\n",
-    "        MI_UKBB = p.map(_continuous_filter_slice, _np.array_split(ind, n_slices))\n",
+    "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
+    "        MI_UKBB = pl.map(_continuous_filter_slice, _np.array_split(ind, n_slices))\n",
     "    MI_UKBB = _np.hstack(MI_UKBB)\n",
     "    return MI_UKBB\n",
     "\n",
@@ -252,8 +252,8 @@
     "    # multiprocessing starts here\n",
     "    ind = _np.arange(len(bed1_sid))\n",
     "    n_slices = _np.ceil(len(ind)/chunck_size)\n",
-    "    with _mp.Pool(_mp.cpu_count()) as p:\n",
-    "        MI_UKBB = p.map(_binary_filter_slice, _np.array_split(ind, n_slices))\n",
+    "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
+    "        MI_UKBB = pl.map(_binary_filter_slice, _np.array_split(ind, n_slices))\n",
     "    MI_UKBB = _np.hstack(MI_UKBB)\n",
     "    return MI_UKBB\n",
     "\n"
