--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T22:47:47.347955Z",
-     "start_time": "2022-07-20T22:47:46.864893Z"
+     "end_time": "2022-07-27T00:41:20.576699Z",
+     "start_time": "2022-07-27T00:41:20.079277Z"
     }
    },
    "outputs": [
@@ -49,8 +49,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T22:47:47.370381Z",
-     "start_time": "2022-07-20T22:47:47.349462Z"
+     "end_time": "2022-07-27T00:41:20.597083Z",
+     "start_time": "2022-07-27T00:41:20.577954Z"
     }
    },
    "outputs": [],
@@ -110,7 +110,7 @@
     "    return mi_temp\n",
     "\n",
     "\n",
-    "def _MI_binary(a, b, a_min, a_max, N=500):\n",
+    "def _MI_binary(a, b):\n",
     "    \"\"\"\n",
     "    calculate mutual information between binary outcome and an SNP variable of 0,1,2\n",
     "    assume no missing data\n",
@@ -119,53 +119,30 @@
     "    p0 = _np.sum(b == 0) / len(b)\n",
     "    p1 = _np.sum(b == 1) / len(b)\n",
     "    p2 = 1. - p0 - p1\n",
+    "    b_marginal = np.array([p0, p1, p2])\n",
     "    # estimate pmf of the binary outcome\n",
     "    a_p0 = _np.sum(a == 0) / len(a)\n",
     "    a_p1 = _np.sum(a == 1) / len(a)\n",
-    "    # estimate cond density\n",
+    "    a_marginal = np.array([a_p0, a_p1]).reshape(-1, 1)\n",
+    "    # estimate the cond density\n",
+    "    joint = np.zeros((2, 3))\n",
     "    _b0 = (b == 0)\n",
-    "    if _np.sum(\n",
-    "            _b0\n",
-    "    ) > 2:  # here proceed to kde only if there are more than 5 data points\n",
-    "        y_cond_p0 = lambda x: x * _np.sum(a[_b0] == 1) / len(a[_b0]) + (\n",
-    "            1 - x) * _np.sum(a[_b0] == 0) / len(a[_b0])\n",
-    "#         y_cond_p0 = gaussian_kde(a[_b0])\n",
-    "    else:\n",
-    "        y_cond_p0 = _np.zeros_like\n",
+    "    joint[0,0] = _np.sum(a[_b0] == 0) / len(a[_b0])\n",
+    "    joint[1,0] = _np.sum(a[_b0] == 1) / len(a[_b0])\n",
     "    _b1 = (b == 1)\n",
-    "    if _np.sum(_b1) > 2:\n",
-    "        y_cond_p1 = lambda x: x * _np.sum(a[_b1] == 1) / len(a[_b1]) + (\n",
-    "            1 - x) * _np.sum(a[_b1] == 0) / len(a[_b1])\n",
-    "#         y_cond_p1 = gaussian_kde(a[_b1]) # this thing uses Scott's rule instead of Silverman defaulted by FFTKDE and R density\n",
-    "    else:\n",
-    "        y_cond_p1 = _np.zeros_like\n",
+    "    joint[0,1] = _np.sum(a[_b1] == 0) / len(a[_b1])\n",
+    "    joint[1,1] = _np.sum(a[_b1] == 1) / len(a[_b1])\n",
     "    _b2 = (b == 2)\n",
-    "    if _np.sum(_b2) > 2:\n",
-    "        y_cond_p2 = lambda x: x * _np.sum(a[_b2] == 1) / len(a[_b2]) + (\n",
-    "            1 - x) * _np.sum(a[_b2] == 0) / len(a[_b2])\n",
-    "#         y_cond_p2 = gaussian_kde(a[_b2])\n",
-    "    else:\n",
-    "        y_cond_p2 = _np.zeros_like\n",
-    "    joint = _np.empty((N, 3))\n",
-    "    a_temp = _np.linspace(a_min, a_max, num=N)\n",
-    "    joint[:, 0] = y_cond_p0(a_temp) * p0\n",
-    "    joint[:, 1] = y_cond_p1(a_temp) * p1\n",
-    "    joint[:, 2] = y_cond_p2(a_temp) * p2\n",
-    "    joint[joint < 1e-20] = 1e-20  # set a threshold to avoid numerical errors\n",
-    "    forward_euler_step = a_temp[1] - a_temp[0]\n",
-    "    #     print(\"total measure:\", _np.sum(joint)*forward_euler_step)\n",
-    "    temp_log = _np.log(joint)\n",
-    "    #     temp_log = _np.nan_to_num(temp_log, nan = 0)\n",
-    "    temp1 = _np.log(_np.sum(joint, 1))\n",
-    "    #     temp1 = _np.nan_to_num(temp1, nan = 0)\n",
-    "    temp_log = temp_log - temp1.reshape(-1, 1)\n",
-    "    temp2 = _np.log(_np.sum(joint, 0) * forward_euler_step)\n",
-    "    #     temp2 = _np.nan_to_num(temp2, nan = 0)\n",
-    "    temp_log = temp_log - temp2.reshape(1, -1)\n",
-    "    # print(fhat_mat * temp_log)\n",
-    "    temp_mat = joint * temp_log\n",
-    "    #     temp_mat = _np.nan_to_num(temp_mat, nan=0.) # numerical fix\n",
-    "    mi_temp = _np.sum(temp_mat) * forward_euler_step\n",
+    "    joint[0,2] = _np.sum(a[_b2] == 0) / len(a[_b2])\n",
+    "    joint[1,2] = _np.sum(a[_b2] == 1) / len(a[_b2])\n",
+    "    \n",
+    "    _ = a_marginal*b_marginal\n",
+    "    _ = joint/_\n",
+    "    __ = joint*_np.log(_)\n",
+    "    __ = _np.nan_to_num(__, nan=0.0) # for possible nuemrical issues\n",
+    "    \n",
+    "    mi_temp = np.sum(__)\n",
+    "    \n",
     "    return mi_temp\n",
     "\n",
     "\n",
@@ -213,10 +190,7 @@
     "                  bim_file,\n",
     "                  fam_file,\n",
     "                  outcome,\n",
-    "                  outcome_iid,\n",
-    "                  a_min=0.,\n",
-    "                  a_max=1.,\n",
-    "                  N=500):\n",
+    "                  outcome_iid):\n",
     "    \"\"\"\n",
     "    (Single Core version) take plink files to calculate the mutual information between the binary outcome and many SNP variables.\n",
     "    \"\"\"\n",
@@ -241,10 +215,7 @@
     "        _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
     "        MI_UKBB[j] = _MI_binary(a=_outcome,\n",
-    "                                b=_SNP,\n",
-    "                                a_min=a_min,\n",
-    "                                a_max=a_max,\n",
-    "                                N=N)\n",
+    "                                b=_SNP)\n",
     "    return MI_UKBB\n",
     "\n",
     "\n",
@@ -306,9 +277,6 @@
     "                           fam_file,\n",
     "                           outcome,\n",
     "                           outcome_iid,\n",
-    "                           a_min=100.,\n",
-    "                           a_max=250.,\n",
-    "                           N=500,\n",
     "                           chunck_size=60000):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) take plink files to calculate the mutual information between the binary outcome and many SNP variables.\n",
@@ -337,10 +305,7 @@
     "            _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
     "            _MI_slice[k] = _MI_binary(a=_outcome,\n",
-    "                                      b=_SNP,\n",
-    "                                      a_min=a_min,\n",
-    "                                      a_max=a_max,\n",
-    "                                      N=N)\n",
+    "                                      b=_SNP)\n",
     "            k += 1\n",
     "        return _MI_slice\n",
     "\n",
@@ -359,8 +324,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-20T22:47:47.382608Z",
-     "start_time": "2022-07-20T22:47:47.371467Z"
+     "end_time": "2022-07-27T00:41:20.609420Z",
+     "start_time": "2022-07-27T00:41:20.597966Z"
     }
    },
    "outputs": [
@@ -368,7 +333,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.12180639345787614\n"
+      "3.408480005039034\n"
      ]
     }
    ],
@@ -377,7 +342,7 @@
     "\n",
     "a = np.random.binomial(2, .3, 200)\n",
     "b = np.random.binomial(2, .3, 200)\n",
-    "print(_MI_binary(a, b, a_min=0., a_max=2., N=500))"
+    "print(_MI_binary(a, b))"
    ]
   },
   {
@@ -405,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
