--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-27T00:41:20.576699Z",
-     "start_time": "2022-07-27T00:41:20.079277Z"
+     "end_time": "2022-08-06T18:31:38.888001Z",
+     "start_time": "2022-08-06T18:31:38.369437Z"
     }
    },
    "outputs": [
@@ -49,8 +49,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-27T00:41:20.597083Z",
-     "start_time": "2022-07-27T00:41:20.577954Z"
+     "end_time": "2022-08-06T18:31:38.911037Z",
+     "start_time": "2022-08-06T18:31:38.889536Z"
     }
    },
    "outputs": [],
@@ -172,7 +172,7 @@
     "                               outcome_iid,\n",
     "                               assume_unique=True,\n",
     "                               return_indices=True)[1]\n",
-    "    MI_UKBB = _np.zeros_like(bed1_sid)\n",
+    "    MI_UKBB = _np.zeros(len(bed1_sid))\n",
     "    for j in range(len(MI_UKBB)):\n",
     "        _SNP = bed1.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
     "        _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
@@ -208,7 +208,8 @@
     "                               outcome_iid,\n",
     "                               assume_unique=True,\n",
     "                               return_indices=True)[1]\n",
-    "    MI_UKBB = _np.zeros_like(bed1_sid)\n",
+    "    MI_UKBB = _np.zeros(len(bed1_sid))\n",
+    "    print(outcome)\n",
     "    for j in range(len(MI_UKBB)):\n",
     "        _SNP = bed1.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
     "        _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
@@ -247,7 +248,7 @@
     "                               return_indices=True)[1]\n",
     "\n",
     "    def _continuous_filter_slice(_slice):\n",
-    "        _MI_slice = _np.zeros_like(_slice)\n",
+    "        _MI_slice = _np.zeros(len(_slice))\n",
     "        k = 0\n",
     "        for j in _slice:\n",
     "            _SNP = bed1.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
@@ -297,7 +298,7 @@
     "                               return_indices=True)[1]\n",
     "\n",
     "    def _binary_filter_slice(_slice):\n",
-    "        _MI_slice = _np.zeros_like(_slice)\n",
+    "        _MI_slice = _np.zeros(len(_slice))\n",
     "        k = 0\n",
     "        for j in _slice:\n",
     "            _SNP = bed1.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
@@ -324,8 +325,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-27T00:41:20.609420Z",
-     "start_time": "2022-07-27T00:41:20.597966Z"
+     "end_time": "2022-08-06T18:31:38.924276Z",
+     "start_time": "2022-08-06T18:31:38.912173Z"
     }
    },
    "outputs": [
@@ -333,7 +334,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.408480005039034\n"
+      "3.425358496530576\n"
      ]
     }
    ],
@@ -347,8 +348,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6b189ee8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-06T18:31:49.247922Z",
+     "start_time": "2022-08-06T18:31:38.925533Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 0. 1. ... 2. 1. 1.]\n",
+      "[1. 2. 0. ... 0. 2. 1.]\n",
+      "[2. 1. 2. ... 2. 2. 2.]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.47696218, 0.12599492, 0.13444112, 0.00086613, 0.0021106 ,\n",
+       "       0.00119387, 0.00104151, 0.00174141, 0.00140224, 0.00134219,\n",
+       "       0.00168226, 0.00123555, 0.00133262, 0.00155708, 0.00166254,\n",
+       "       0.00196409, 0.00123485, 0.00196512, 0.0018361 , 0.00129221])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from bed_reader import open_bed\n",
+    "\n",
+    "bed_file = r\"./MI_AG/tests/sim/sim1.bed\"\n",
+    "bim_file = r\"./MI_AG/tests/sim/sim1.bim\"\n",
+    "fam_file = r\"./MI_AG/tests/sim/sim1.fam\"\n",
+    "\n",
+    "_bed = open_bed(filepath=bed_file,\n",
+    "                fam_filepath=fam_file,\n",
+    "                bim_filepath=bim_file)\n",
+    "outcome = np.random.rand(_bed.iid_count)\n",
+    "outcome_iid = _bed.iid\n",
+    "\n",
+    "true_beta = np.array([4.2, -2.5, 2.6])\n",
+    "for j in np.arange(3):\n",
+    "    outcome += true_beta[j] * _bed.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
+    "    print(_bed.read(_np.s_[:, j], dtype=_np.float64).flatten())\n",
+    "\n",
+    "iid_ind = np.random.permutation(np.arange(_bed.iid_count))\n",
+    "outcome = outcome[iid_ind]\n",
+    "outcome_iid = outcome_iid[iid_ind]\n",
+    "\n",
+    "\n",
+    "MI_continuous = continuous_filter_parallel(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, a_min=np.min(outcome)-10, a_max=np.max(outcome)+10, outcome=outcome, outcome_iid=outcome_iid, chunck_size=1000)\n",
+    "\n",
+    "MI_continuous[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fb2875be",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-06T18:31:53.889555Z",
+     "start_time": "2022-08-06T18:31:49.250055Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 0. 1. ... 2. 1. 1.]\n",
+      "[1. 2. 0. ... 0. 2. 1.]\n",
+      "[2. 1. 2. ... 2. 2. 2.]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([3.89422255, 3.61878904, 3.64918834, 3.45361786, 3.4590794 ,\n",
+       "       3.45377494, 3.47729631, 3.44618573, 3.45223916, 3.47380826,\n",
+       "       3.47622363, 3.45253511, 3.45828569, 3.47345116, 3.48022704,\n",
+       "       3.46732451, 3.44345405, 3.46975868, 3.46123354, 3.47407238])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bed_file = r\"./MI_AG/tests/sim/sim1.bed\"\n",
+    "bim_file = r\"./MI_AG/tests/sim/sim1.bim\"\n",
+    "fam_file = r\"./MI_AG/tests/sim/sim1.fam\"\n",
+    "\n",
+    "_bed = open_bed(filepath=bed_file,\n",
+    "                fam_filepath=fam_file,\n",
+    "                bim_filepath=bim_file)\n",
+    "outcome = np.random.rand(_bed.iid_count)\n",
+    "outcome_iid = _bed.iid\n",
+    "\n",
+    "true_beta = np.array([4.2, -2.5, 2.6])\n",
+    "for j in np.arange(3):\n",
+    "    outcome += true_beta[j] * _bed.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
+    "    print(_bed.read(_np.s_[:, j], dtype=_np.float64).flatten())\n",
+    "\n",
+    "outcome = np.random.binomial(1, np.tanh(outcome / 2) / 2 + .5)\n",
+    "\n",
+    "iid_ind = np.random.permutation(np.arange(_bed.iid_count))\n",
+    "outcome = outcome[iid_ind]\n",
+    "outcome_iid = outcome_iid[iid_ind]\n",
+    "\n",
+    "MI_binary = binary_filter_parallel(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, outcome_iid=outcome_iid, chunck_size=1000)\n",
+    "\n",
+    "MI_binary[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0764c527",
    "metadata": {},
    "outputs": [],
    "source": []
