--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -127,22 +127,22 @@
     "    # estimate the cond density\n",
     "    joint = np.zeros((2, 3))\n",
     "    _b0 = (b == 0)\n",
-    "    joint[0,0] = _np.sum(a[_b0] == 0) / len(a[_b0])\n",
-    "    joint[1,0] = _np.sum(a[_b0] == 1) / len(a[_b0])\n",
+    "    joint[0, 0] = _np.sum(a[_b0] == 0) / len(a[_b0])\n",
+    "    joint[1, 0] = _np.sum(a[_b0] == 1) / len(a[_b0])\n",
     "    _b1 = (b == 1)\n",
-    "    joint[0,1] = _np.sum(a[_b1] == 0) / len(a[_b1])\n",
-    "    joint[1,1] = _np.sum(a[_b1] == 1) / len(a[_b1])\n",
+    "    joint[0, 1] = _np.sum(a[_b1] == 0) / len(a[_b1])\n",
+    "    joint[1, 1] = _np.sum(a[_b1] == 1) / len(a[_b1])\n",
     "    _b2 = (b == 2)\n",
-    "    joint[0,2] = _np.sum(a[_b2] == 0) / len(a[_b2])\n",
-    "    joint[1,2] = _np.sum(a[_b2] == 1) / len(a[_b2])\n",
-    "    \n",
-    "    _ = a_marginal*b_marginal\n",
-    "    _ = joint/_\n",
-    "    __ = joint*_np.log(_)\n",
-    "    __ = _np.nan_to_num(__, nan=0.0) # for possible nuemrical issues\n",
-    "    \n",
+    "    joint[0, 2] = _np.sum(a[_b2] == 0) / len(a[_b2])\n",
+    "    joint[1, 2] = _np.sum(a[_b2] == 1) / len(a[_b2])\n",
+    "\n",
+    "    _ = a_marginal * b_marginal\n",
+    "    _ = joint / _\n",
+    "    __ = joint * _np.log(_)\n",
+    "    __ = _np.nan_to_num(__, nan=0.0)  # for possible nuemrical issues\n",
+    "\n",
     "    mi_temp = np.sum(__)\n",
-    "    \n",
+    "\n",
     "    return mi_temp\n",
     "\n",
     "\n",
@@ -186,11 +186,7 @@
     "    return MI_UKBB\n",
     "\n",
     "\n",
-    "def binary_filter(bed_file,\n",
-    "                  bim_file,\n",
-    "                  fam_file,\n",
-    "                  outcome,\n",
-    "                  outcome_iid):\n",
+    "def binary_filter(bed_file, bim_file, fam_file, outcome, outcome_iid):\n",
     "    \"\"\"\n",
     "    (Single Core version) take plink files to calculate the mutual information between the binary outcome and many SNP variables.\n",
     "    \"\"\"\n",
@@ -215,8 +211,7 @@
     "        _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "        _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "        _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "        MI_UKBB[j] = _MI_binary(a=_outcome,\n",
-    "                                b=_SNP)\n",
+    "        MI_UKBB[j] = _MI_binary(a=_outcome, b=_SNP)\n",
     "    return MI_UKBB\n",
     "\n",
     "\n",
@@ -305,8 +300,7 @@
     "            _SNP = _SNP[gene_ind]  # get gene iid also in outcome iid\n",
     "            _outcome = outcome[_SNP != -127]  # remove missing SNP in outcome\n",
     "            _SNP = _SNP[_SNP != -127]  # remove missing SNP\n",
-    "            _MI_slice[k] = _MI_binary(a=_outcome,\n",
-    "                                      b=_SNP)\n",
+    "            _MI_slice[k] = _MI_binary(a=_outcome, b=_SNP)\n",
     "            k += 1\n",
     "        return _MI_slice\n",
     "\n",
@@ -403,8 +397,14 @@
     "outcome = outcome[iid_ind]\n",
     "outcome_iid = outcome_iid[iid_ind]\n",
     "\n",
-    "\n",
-    "MI_continuous = continuous_filter_parallel(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, a_min=np.min(outcome)-10, a_max=np.max(outcome)+10, outcome=outcome, outcome_iid=outcome_iid, chunck_size=1000)\n",
+    "MI_continuous = continuous_filter_parallel(bed_file=bed_file,\n",
+    "                                           bim_file=bim_file,\n",
+    "                                           fam_file=fam_file,\n",
+    "                                           a_min=np.min(outcome) - 10,\n",
+    "                                           a_max=np.max(outcome) + 10,\n",
+    "                                           outcome=outcome,\n",
+    "                                           outcome_iid=outcome_iid,\n",
+    "                                           chunck_size=1000)\n",
     "\n",
     "MI_continuous[:20]"
    ]
@@ -465,7 +465,12 @@
     "outcome = outcome[iid_ind]\n",
     "outcome_iid = outcome_iid[iid_ind]\n",
     "\n",
-    "MI_binary = binary_filter_parallel(bed_file=bed_file, bim_file=bim_file, fam_file=fam_file, outcome=outcome, outcome_iid=outcome_iid, chunck_size=1000)\n",
+    "MI_binary = binary_filter_parallel(bed_file=bed_file,\n",
+    "                                   bim_file=bim_file,\n",
+    "                                   fam_file=fam_file,\n",
+    "                                   outcome=outcome,\n",
+    "                                   outcome_iid=outcome_iid,\n",
+    "                                   chunck_size=1000)\n",
     "\n",
     "MI_binary[:20]"
    ]
@@ -495,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
