--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T18:31:38.888001Z",
-     "start_time": "2022-08-06T18:31:38.369437Z"
+     "end_time": "2022-08-06T18:35:13.664255Z",
+     "start_time": "2022-08-06T18:35:13.215633Z"
     }
    },
    "outputs": [
@@ -49,8 +49,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T18:31:38.911037Z",
-     "start_time": "2022-08-06T18:31:38.889536Z"
+     "end_time": "2022-08-06T18:35:13.684597Z",
+     "start_time": "2022-08-06T18:35:13.665580Z"
     }
    },
    "outputs": [],
@@ -119,13 +119,13 @@
     "    p0 = _np.sum(b == 0) / len(b)\n",
     "    p1 = _np.sum(b == 1) / len(b)\n",
     "    p2 = 1. - p0 - p1\n",
-    "    b_marginal = np.array([p0, p1, p2])\n",
+    "    b_marginal = _np.array([p0, p1, p2])\n",
     "    # estimate pmf of the binary outcome\n",
     "    a_p0 = _np.sum(a == 0) / len(a)\n",
     "    a_p1 = _np.sum(a == 1) / len(a)\n",
-    "    a_marginal = np.array([a_p0, a_p1]).reshape(-1, 1)\n",
+    "    a_marginal = _np.array([a_p0, a_p1]).reshape(-1, 1)\n",
     "    # estimate the cond density\n",
-    "    joint = np.zeros((2, 3))\n",
+    "    joint = _np.zeros((2, 3))\n",
     "    _b0 = (b == 0)\n",
     "    joint[0, 0] = _np.sum(a[_b0] == 0) / len(a[_b0])\n",
     "    joint[1, 0] = _np.sum(a[_b0] == 1) / len(a[_b0])\n",
@@ -141,7 +141,7 @@
     "    __ = joint * _np.log(_)\n",
     "    __ = _np.nan_to_num(__, nan=0.0)  # for possible nuemrical issues\n",
     "\n",
-    "    mi_temp = np.sum(__)\n",
+    "    mi_temp = _np.sum(__)\n",
     "\n",
     "    return mi_temp\n",
     "\n",
@@ -319,8 +319,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T18:31:38.924276Z",
-     "start_time": "2022-08-06T18:31:38.912173Z"
+     "end_time": "2022-08-06T18:35:13.696342Z",
+     "start_time": "2022-08-06T18:35:13.685724Z"
     }
    },
    "outputs": [
@@ -328,7 +328,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.425358496530576\n"
+      "4.0815750498581\n"
      ]
     }
    ],
@@ -346,8 +346,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T18:31:49.247922Z",
-     "start_time": "2022-08-06T18:31:38.925533Z"
+     "end_time": "2022-08-06T18:35:25.005167Z",
+     "start_time": "2022-08-06T18:35:13.697674Z"
     }
    },
    "outputs": [
@@ -363,10 +363,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.47696218, 0.12599492, 0.13444112, 0.00086613, 0.0021106 ,\n",
-       "       0.00119387, 0.00104151, 0.00174141, 0.00140224, 0.00134219,\n",
-       "       0.00168226, 0.00123555, 0.00133262, 0.00155708, 0.00166254,\n",
-       "       0.00196409, 0.00123485, 0.00196512, 0.0018361 , 0.00129221])"
+       "array([0.48040921, 0.12443102, 0.13416644, 0.00087769, 0.00208491,\n",
+       "       0.00116959, 0.00107918, 0.00157157, 0.00136674, 0.00132119,\n",
+       "       0.00181782, 0.0012585 , 0.00138828, 0.00150285, 0.00148423,\n",
+       "       0.00197003, 0.0015183 , 0.00181245, 0.00184937, 0.00103153])"
       ]
      },
      "execution_count": 4,
@@ -415,8 +415,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T18:31:53.889555Z",
-     "start_time": "2022-08-06T18:31:49.250055Z"
+     "end_time": "2022-08-06T18:35:29.450438Z",
+     "start_time": "2022-08-06T18:35:25.010813Z"
     }
    },
    "outputs": [
@@ -432,10 +432,10 @@
     {
      "data": {
       "text/plain": [
-       "array([3.89422255, 3.61878904, 3.64918834, 3.45361786, 3.4590794 ,\n",
-       "       3.45377494, 3.47729631, 3.44618573, 3.45223916, 3.47380826,\n",
-       "       3.47622363, 3.45253511, 3.45828569, 3.47345116, 3.48022704,\n",
-       "       3.46732451, 3.44345405, 3.46975868, 3.46123354, 3.47407238])"
+       "array([3.89332199, 3.62801999, 3.64557908, 3.45341179, 3.46398927,\n",
+       "       3.4538728 , 3.47455312, 3.44776759, 3.45194863, 3.47419102,\n",
+       "       3.4771782 , 3.45280795, 3.45623564, 3.47352485, 3.48042691,\n",
+       "       3.46694311, 3.44058077, 3.4700723 , 3.46119425, 3.47370049])"
       ]
      },
      "execution_count": 5,
@@ -500,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
