--- a/plink_filtering_MODULE.ipynb
+++ b/plink_filtering_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T19:15:38.647272Z",
-     "start_time": "2022-08-06T19:15:38.166214Z"
+     "end_time": "2022-08-07T23:27:42.120875Z",
+     "start_time": "2022-08-07T23:27:41.689384Z"
     }
    },
    "outputs": [
@@ -49,8 +49,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T19:15:38.670752Z",
-     "start_time": "2022-08-06T19:15:38.649216Z"
+     "end_time": "2022-08-07T23:27:42.142641Z",
+     "start_time": "2022-08-07T23:27:42.122282Z"
     }
    },
    "outputs": [],
@@ -127,14 +127,14 @@
     "    # estimate the cond density\n",
     "    joint = _np.zeros((2, 3))\n",
     "    _b0 = (b == 0)\n",
-    "    joint[0, 0] = _np.sum(a[_b0] == 0) / len(a[_b0])\n",
-    "    joint[1, 0] = _np.sum(a[_b0] == 1) / len(a[_b0])\n",
+    "    joint[0, 0] = _np.sum(a[_b0] == 0) / len(a)\n",
+    "    joint[1, 0] = _np.sum(a[_b0] == 1) / len(a)\n",
     "    _b1 = (b == 1)\n",
-    "    joint[0, 1] = _np.sum(a[_b1] == 0) / len(a[_b1])\n",
-    "    joint[1, 1] = _np.sum(a[_b1] == 1) / len(a[_b1])\n",
+    "    joint[0, 1] = _np.sum(a[_b1] == 0) / len(a)\n",
+    "    joint[1, 1] = _np.sum(a[_b1] == 1) / len(a)\n",
     "    _b2 = (b == 2)\n",
-    "    joint[0, 2] = _np.sum(a[_b2] == 0) / len(a[_b2])\n",
-    "    joint[1, 2] = _np.sum(a[_b2] == 1) / len(a[_b2])\n",
+    "    joint[0, 2] = _np.sum(a[_b2] == 0) / len(a)\n",
+    "    joint[1, 2] = _np.sum(a[_b2] == 1) / len(a)\n",
     "\n",
     "    _ = a_marginal * b_marginal\n",
     "    _ = joint / _\n",
@@ -319,8 +319,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T19:15:38.683198Z",
-     "start_time": "2022-08-06T19:15:38.671733Z"
+     "end_time": "2022-08-07T23:27:42.154582Z",
+     "start_time": "2022-08-07T23:27:42.143565Z"
     }
    },
    "outputs": [
@@ -328,7 +328,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.942767414703255\n"
+      "0.002529736056201149\n"
      ]
     }
    ],
@@ -346,8 +346,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T19:15:49.280816Z",
-     "start_time": "2022-08-06T19:15:38.684470Z"
+     "end_time": "2022-08-07T23:27:53.605846Z",
+     "start_time": "2022-08-07T23:27:42.155985Z"
     }
    },
    "outputs": [
@@ -363,10 +363,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.47757051, 0.12489701, 0.1340366 , 0.00095683, 0.00220564,\n",
-       "       0.0011765 , 0.00104254, 0.0016205 , 0.00125984, 0.00117681,\n",
-       "       0.00165448, 0.00134136, 0.00147777, 0.00139555, 0.00161601,\n",
-       "       0.0020675 , 0.00129115, 0.00184916, 0.00192033, 0.00115942])"
+       "array([0.47695349, 0.12443565, 0.135269  , 0.00091694, 0.00206842,\n",
+       "       0.00115005, 0.00096158, 0.00175658, 0.0013687 , 0.00114087,\n",
+       "       0.00178697, 0.00124353, 0.00144796, 0.00145016, 0.0016113 ,\n",
+       "       0.00192926, 0.0016664 , 0.0017184 , 0.00202365, 0.00106484])"
       ]
      },
      "execution_count": 4,
@@ -415,8 +415,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-06T19:15:54.049920Z",
-     "start_time": "2022-08-06T19:15:49.281876Z"
+     "end_time": "2022-08-07T23:27:57.536800Z",
+     "start_time": "2022-08-07T23:27:53.606874Z"
     }
    },
    "outputs": [
@@ -430,12 +430,23 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_346162/1621196534.py:84: RuntimeWarning: divide by zero encountered in log\n",
+      "  __ = joint * _np.log(_)\n",
+      "/tmp/ipykernel_346162/1621196534.py:84: RuntimeWarning: invalid value encountered in multiply\n",
+      "  __ = joint * _np.log(_)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([3.89358152, 3.63658453, 3.62908832, 3.4533153 , 3.46022662,\n",
-       "       3.45423643, 3.47486355, 3.44530145, 3.45288196, 3.47458511,\n",
-       "       3.47681003, 3.45244055, 3.45723447, 3.47369505, 3.48085041,\n",
-       "       3.46759397, 3.44247878, 3.46972253, 3.46131621, 3.47436255])"
+       "array([1.14013325e-01, 3.64837028e-02, 5.13765938e-02, 5.17590746e-05,\n",
+       "       3.65130961e-04, 4.87922518e-04, 1.31011285e-04, 8.32624405e-04,\n",
+       "       9.87081183e-05, 3.09522735e-04, 9.33283832e-05, 1.18945496e-05,\n",
+       "       1.51177914e-04, 4.44415514e-04, 2.17526318e-05, 1.86222910e-04,\n",
+       "       5.91537971e-05, 3.95119777e-04, 1.76071670e-04, 5.93391529e-04])"
       ]
      },
      "execution_count": 5,
