--- a/logistic_SCAD_MCP_np_MODULE.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T23:48:11.812107Z",
-     "start_time": "2022-07-21T23:48:11.624479Z"
+     "end_time": "2022-08-09T00:37:30.949617Z",
+     "start_time": "2022-08-09T00:37:30.770569Z"
     }
    },
    "outputs": [],
@@ -51,8 +51,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T23:48:11.978934Z",
-     "start_time": "2022-07-21T23:48:11.813258Z"
+     "end_time": "2022-08-09T00:37:31.107698Z",
+     "start_time": "2022-08-09T00:37:30.950829Z"
     }
    },
    "outputs": [],
@@ -205,8 +205,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T23:48:12.026595Z",
-     "start_time": "2022-07-21T23:48:11.980294Z"
+     "end_time": "2022-08-09T00:37:31.155897Z",
+     "start_time": "2022-08-09T00:37:31.108926Z"
     }
    },
    "outputs": [],
@@ -303,8 +303,10 @@
     "    y = outcome.copy()\n",
     "    N = X.shape[0]\n",
     "    if _np.all(beta_0 == _np.ones(1)):\n",
-    "        cov = (y - _np.mean(y)) @ (X - 1 / N * _np.sum(X, 0).reshape(1, -1))\n",
-    "        beta = _np.sign(cov)\n",
+    "        center_X = (X - 1 / N * _np.sum(X, 0).reshape(1, -1))\n",
+    "        cov = (y - _np.mean(y)) @ center_X\n",
+    "        X_var = _np.sum(X**2, 0)\n",
+    "        beta = cov/X_var\n",
     "    else:\n",
     "        beta = beta_0\n",
     "#     add design matrix column for the intercept, if it's not there already\n",
@@ -511,8 +513,10 @@
     "    y = outcome.copy()\n",
     "    N = X.shape[0]\n",
     "    if _np.all(beta_0 == _np.ones(1)):\n",
-    "        cov = (y - _np.mean(y)) @ (X - 1 / N * _np.sum(X, 0).reshape(1, -1))\n",
-    "        beta = _np.sign(cov)\n",
+    "        center_X = (X - 1 / N * _np.sum(X, 0).reshape(1, -1))\n",
+    "        cov = (y - _np.mean(y)) @ center_X\n",
+    "        X_var = _np.sum(X**2, 0)\n",
+    "        beta = cov/X_var\n",
     "    else:\n",
     "        beta = beta_0\n",
     "#     add design matrix column for the intercept, if it's not there already\n",
@@ -733,8 +737,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T23:48:26.531421Z",
-     "start_time": "2022-07-21T23:48:12.159150Z"
+     "end_time": "2022-08-09T00:37:50.678425Z",
+     "start_time": "2022-08-09T00:37:31.294846Z"
     }
    },
    "outputs": [],
@@ -786,8 +790,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-21T23:48:26.536644Z",
-     "start_time": "2022-07-21T23:48:26.532580Z"
+     "end_time": "2022-08-09T00:37:50.685587Z",
+     "start_time": "2022-08-09T00:37:50.679662Z"
     }
    },
    "outputs": [
@@ -835,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
