--- a/LM_SCAD_MCP_cp_MODULE.ipynb
+++ b/LM_SCAD_MCP_cp_MODULE.ipynb
@@ -321,7 +321,7 @@
     "    N = X.shape[0]\n",
     "    if _cp.all(beta_0 == _cp.ones(1)):\n",
     "        cov = (y - _cp.mean(y)) @ (X - 1 / N * _cp.sum(X, 0).reshape(1, -1))\n",
-    "        beta = _cp.sign(cov)\n",
+    "        beta = cov/_cp.var(X, 0)\n",
     "    else:\n",
     "        beta = beta_0\n",
     "#     add design matrix column for the intercept, if it's not there already\n",
@@ -524,7 +524,7 @@
     "    N = X.shape[0]\n",
     "    if _cp.all(beta_0 == _cp.ones(1)):\n",
     "        cov = (y - _cp.mean(y)) @ (X - 1 / N * _cp.sum(X, 0).reshape(1, -1))\n",
-    "        beta = _cp.sign(cov)\n",
+    "        beta = cov/_cp.var(X, 0)\n",
     "    else:\n",
     "        beta = beta_0\n",
     "#     add design matrix column for the intercept, if it's not there already\n",
@@ -1007,7 +1007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
